--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.3
 blinker==1.7.0
+boto3==1.34.92
+botocore==1.34.92
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -41,6 +43,7 @@ httplib2==0.22.0
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.3
+jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.21.1
@@ -92,6 +95,7 @@ requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
 rsa==4.9
+s3transfer==0.10.1
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
